Resolved vertical overflow issue on mobilessssssss
Location was cutting off, and the background
was cutting off when there was vertical overflow.
Resolution: amended height option to be the size
of the content, and added background colour for
cleaner looking vertical overflow.

--- a/src/style.css
+++ b/src/style.css
@@ -91,6 +91,8 @@ input {
     margin: 0;
     width: 100%;
     overflow:hidden;
+    height: fit-content;
+    background-color: #88A201;;
 }
 
 #location-result {
@@ -481,6 +483,7 @@ img {
     #result-body {
         gap: 30px;
         padding-top: 20px;
+        overflow: scroll;
     }
     
     #location-result {
